# oc_toolbox

./: .gitignore  README.md
oc_search/: README.md  oc_search
oc_stats/: README.md  oc_stats
ocsearch/: README.md  ocsearch
omo_config/: README.md  oh-my-openagent.json
omo_copilot_sync/: README.md  omo_copilot_sync
omo_stats/: omo_stats
omo_vs_copilot_sync/: README.md  omo_vs_copilot_sync
skills/: README.md
skills/skill-pdf-ingestion/: SKILL.md  pdf_to_md.py  pyproject.toml
